--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -9,6 +9,9 @@
         <br>
         <button type="submit">Iniciar Sesión</button>
     </form>
-    <button onclick="location.href='/register'">Registrarse</button>
+    <button onclick="location.href='/register'">Registrate</button>
+</div>
+<div>
+    <a href="/api/sessions/github">Entrár con GitHub</a>
 </div>
 <script src="/js/login.js"></script>
